--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
-body {
+*{
 
-    font-family: Verdana;
-    font-size: medium;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
 
+body{
+    background: #1f282e;
+    color: #fff;
 }
